--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -925,7 +925,7 @@ a:hover {
   overflow-y: auto;
 }
 
-.modal__btn-close {
+/*.modal__btn-close {
   padding-left: 95%;
   float: right;
   font-family: sans-serif;
@@ -937,7 +937,7 @@ a:hover {
   opacity: 0.5;
   text-decoration: none;
 }
-
+*/
 .modal__body {
   position: relative;
   padding-left: 8%;
@@ -967,6 +967,23 @@ a:hover {
   border-radius: 12px;
   color: white;
   font-weight: 400;
+}
+
+.hero__container__container2 {
+  display: grid;
+  width: 100%;
+  height: 100%;
+  grid-template-columns: 100%;
+  grid-template-rows: repeat(12, 1fr);
+}
+
+.hero__container__container2 span {
+  font-family: "Playfair Display", serif;
+  font-weight: 100;
+}
+
+.hero__container__img {
+  width: 100%;
 }
 
 #tooltip {
@@ -1175,108 +1192,43 @@ a:hover {
   background-image: linear-gradient(160deg, #44cbd4, #2881ef);
 }
 
-.hero {
-  margin: auto;
-  width: 450px;
-  height: 650px;
-  background-image: url("../../images/card/bigfon.png");
-  background-size: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  border: 4px solid white;
-  border-radius: 40px;
-  color: white;
-  font-family: "Roboto", sans-serif;
-  font-size: 1.21vw;
-  font-weight: 500;
-}
-
-.hero__container {
-  padding-left: 8%;
-  padding-right: 8%;
-  padding-top: 8%;
-  display: grid;
-  width: 82%;
-  height: 70%;
-  grid-template-rows: 100%;
-  grid-template-columns: 40% 60%;
-  column-gap: 5%;
-}
-
-.hero__container__container2 {
-  display: grid;
-  width: 100%;
-  height: 100%;
-  grid-template-columns: 100%;
-  grid-template-rows: repeat(12, 1fr);
-}
-
-.hero__container__container2 span {
-  font-family: "Playfair Display", serif;
-  font-weight: 100;
-}
-
-.hero__container__img {
-  width: 100%;
-}
-
-.hero__container__button {
-  margin-top: 20%;
-  margin-left: 70%;
-  width: 22%;
-  height: 5%;
-  background-color: #DE9E15;
-  border-width: 0;
-  border-radius: 12px;
-  color: white;
-  font-weight: 400;
-}
-
-.spell-card {
-  margin: auto;
-  width: 450px;
-  height: 270px;
-  background-image: url("../../images/card/smallfon.png");
-  background-size: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  border: 4px solid white;
-  border-radius: 30px;
-  color: white;
-  font-family: "Roboto", sans-serif;
-  font-size: 1.21vw;
-  font-weight: 500;
+/*.spell-card {
+    margin: auto;
+    width: 450px;
+    height: 270px;
+    background-image: url('../../images/card/smallfon.png');
+    background-size: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    border: 4px solid white;
+    border-radius: 30px;
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.21vw;
+    font-weight: 500;
 }
 
 .spell-card__container {
-  padding-left: 8%;
-  padding-right: 8%;
-  padding-top: 3%;
-  display: grid;
-  width: 82%;
-  height: 70%;
-  grid-template-rows: 20% 80%;
-  grid-template-columns: 100%;
+    padding-left: 8%;
+    padding-right: 8%;
+    padding-top: 3%;
+    display: grid;
+    width: 82%;
+    height: 70%;
+    grid-template-rows: 20% 80%;
+    grid-template-columns: 100%;
 }
-
-.spell-card__container__text2 {
-  font-family: "Playfair Display", serif;
-  font-size: 1.11vw;
-  font-weight: 100;
-  line-height: 150%;
-}
-
-.spell-card__container__button {
-  margin-left: 70%;
-  width: 22%;
-  height: 12%;
-  background-color: #DE9E15;
-  border-width: 0;
-  border-radius: 12px;
-  color: white;
-  font-weight: 400;
-}
-
+*/
+/*.spell-card__container__button {
+    margin-left: 70%;
+    width: 22%;
+    height: 12%;
+    background-color: #DE9E15;
+    border-width: 0;
+    border-radius: 12px;
+    color: white;
+    font-weight: 400;
+}*/
 .modal__backdrop2 {
   position: fixed;
   top: 0;
@@ -1298,12 +1250,12 @@ a:hover {
   display: flex;
   flex-direction: column;
   background-clip: padding-box;
-  background-image: url("../../images/card/bigfon.png");
+  background-image: url("../../images/card/smallfon.png");
   background-size: 100%;
   background-position: center;
   background-repeat: no-repeat;
   border: 4px solid white;
-  border-radius: 40px;
+  border-radius: 30px;
   color: white;
   font-family: "Roboto", sans-serif;
   font-size: 1.21vw;
@@ -1316,38 +1268,24 @@ a:hover {
     margin: 50px auto;
   }
 }
-.modal__show2 .modal__backdrop2,
-.modal__show2 .modal__content2 {
+.modal__show .modal__backdrop2,
+.modal__show .modal__content2 {
   opacity: 1;
   z-index: 1050;
   pointer-events: auto;
   overflow-y: auto;
 }
 
-.modal__btn-close2 {
-  padding-left: 95%;
-  float: right;
-  font-family: sans-serif;
-  font-size: 24px;
-  font-weight: 700;
-  line-height: 1;
-  color: #000;
-  text-shadow: 0 1px 0 #fff;
-  opacity: 0.5;
-  text-decoration: none;
-}
-
 .modal__body2 {
   position: relative;
   padding-left: 8%;
   padding-right: 8%;
-  padding-top: 8%;
+  padding-top: 3%;
   display: grid;
-  width: 80%;
-  height: 75vh;
-  grid-template-rows: 100%;
-  grid-template-columns: 40% 60%;
-  column-gap: 5%;
+  width: 82%;
+  height: 70%;
+  grid-template-rows: 20% 80%;
+  grid-template-columns: 100%;
   overflow: hidden;
 }
 
@@ -1366,6 +1304,13 @@ a:hover {
   border-radius: 12px;
   color: white;
   font-weight: 400;
+}
+
+.spell-card__container__text2 {
+  font-family: "Playfair Display", serif;
+  font-size: 1.11vw;
+  font-weight: 100;
+  line-height: 150%;
 }
 
 /*# sourceMappingURL=style.css.map */
