--- a/assets/styles/scss/modal.scss
+++ b/assets/styles/scss/modal.scss
@@ -48,7 +48,7 @@
   
 
 
-  .modal__btn-close {
+  /*.modal__btn-close {
     padding-left: 95%;
     float: right;
     font-family: sans-serif;
@@ -60,7 +60,7 @@
     opacity: 0.5;
     text-decoration: none;
   }
-  
+  */
   .modal__body {
     position: relative;
     padding-left: 8%;
@@ -94,4 +94,19 @@
             font-weight: 400;
   }
 
-  
+  .hero__container__container2 {
+    display: grid;
+    width: 100%;
+    height: 100%;
+    grid-template-columns: 100%;
+    grid-template-rows: repeat(12, 1fr);
+}
+
+.hero__container__container2 span {
+    font-family: 'Playfair Display', serif;
+    font-weight: 100;
+}
+
+.hero__container__img {
+    width: 100%;
+}
