--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -616,18 +616,13 @@ template {
   font-family: "Roboto", sans-serif;
 }
 
-#comment-field {
-  display: flex;
-  flex-direction: column;
+.comments__result-item > div {
+  width: 30rem;
+  height: 7rem;
+  background-color: white;
+  border-radius: 27px;
 }
 
-/*.comments__result-item {
-    width: 38rem;
-    height: 7rem;
-    background-color: white;
-    border-radius: 27px;
-    margin-bottom: 5px;
-}*/
 .comments__photo {
   display: block;
   position: relative;
@@ -648,7 +643,7 @@ template {
 .comments__time {
   display: block;
   font-size: 15px;
-  margin: -1rem 0 0 32rem;
+  margin: -1rem 0 0 25rem;
 }
 
 .comments {
