--- a/assets/styles/scss/blocks/comments/__result/__result.scss
+++ b/assets/styles/scss/blocks/comments/__result/__result.scss
@@ -1,16 +1,9 @@
-#comment-field {
-    display: flex;
-    flex-direction: column;
-}
-
-
-/*.comments__result-item {
-    width: 38rem;
+.comments__result-item>div {
+    width: 30rem;
     height: 7rem;
     background-color: white;
     border-radius: 27px;
-    margin-bottom: 5px;
-}*/
+}
 
 .comments__photo {
     display: block;
@@ -32,5 +25,5 @@
 .comments__time {
     display: block;
     font-size: 15px;
-    margin: -1rem 0 0 32rem;
+    margin: -1rem 0 0 25rem;
 }
