--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -5,7 +5,7 @@
 }
 
 .slider_spells .slick-track {
-  height: 5em;
+  height: 6em;
 }
 
 .slick-list {
@@ -22,7 +22,7 @@
 
 .slider_spells {
   position: relative;
-  padding: 0 8%;
+  padding: 0;
 }
 
 .slick-arrow {
@@ -57,11 +57,11 @@
 }
 
 .slider_spells .slick-prev {
-  left: 7%;
+  left: -8%;
 }
 
 .slider_spells .slick-next {
-  right: 7%;
+  right: -8%;
 }
 
 .slick-prev:hover {
