--- a/assets/styles/scss/modal2.scss
+++ b/assets/styles/scss/modal2.scss
@@ -20,7 +20,7 @@
     flex-direction: column;
     background-clip: padding-box;
     background-image: url('../../images/card/smallfon.png');
-    background-size: 100%;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     border: 4px solid white;
