--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -79,6 +79,7 @@
 
 .slider__item {
   text-align: center;
+  cursor: pointer;
 }
 
 .slick-dots {
@@ -468,6 +469,7 @@ template {
   font-size: 25px;
   line-height: 33px;
   transition: 0.2s;
+  cursor: pointer;
 }
 
 .galleryText_size:hover {
