--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -19,3 +19,5 @@
 @import "../scss/blocks/button/button.scss";
 @import "../scss/blocks/hero+spell/hero+spell.scss";
 @import "../scss/modal2.scss";
+@import "../scss/modalvhod.scss";
+@import "../scss/registration.scss";
