--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -569,7 +569,7 @@ template {
 
 .commentsBox {
   box-sizing: border-box;
-  padding: 4em 6vw 10vw 6vw;
+  padding: 4em 6vw 4vw 6vw;
 }
 
 .comments__block {
@@ -633,18 +633,21 @@ template {
 
 .comments__name {
   font-size: 25px;
-  margin: 1vh 0 0 12vh;
+  margin: 1vh 0 0 5vh;
 }
 
 .comments__content {
   font-size: 23px;
-  margin: 2vh 0 0 12vh;
+  margin: 1vh 0 0 3vh;
+  max-width: 80vh;
+  max-height: 5vh;
+  overflow: auto;
 }
 
 .comments__time {
   display: block;
   font-size: 15px;
-  margin: 3vh 0 0 70vh;
+  margin: 2vh 0 0 70vh;
 }
 
 .comments {
