окно регистрации и html валидация

--- a/assets/styles/scss/blocks/form/form.scss
+++ b/assets/styles/scss/blocks/form/form.scss
@@ -153,6 +153,7 @@
     border-radius: 8px;
     padding: 0px;
     margin-top: 23px;
+    margin-bottom: 7%;
     color: #fff;
     background-color: #DE9E15;
     border-style: solid;
