--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -1159,6 +1159,7 @@ a:hover {
   border-radius: 8px;
   padding: 0px;
   margin-top: 23px;
+  margin-bottom: 7%;
   color: #fff;
   background-color: #DE9E15;
   border-style: solid;
@@ -1326,63 +1327,6 @@ input {
   line-height: 150%;
 }
 
-.modal__backdrop1 {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background: rgba(0, 0, 0, 0.5);
-  opacity: 0;
-  z-index: -1;
-  pointer-events: none;
-  transition: opacity 0.2s ease-in;
-}
-
-.modal__content1 {
-  position: relative;
-  width: 40%;
-  margin: auto;
-  transition: opacity 0.3s ease-in;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  background-clip: padding-box;
-  background-color: #1D1D1F;
-  border: 4px solid white;
-  border-radius: 30px;
-  color: white;
-  font-family: "Roboto", sans-serif;
-  font-size: 1.21vw;
-}
-
-@media (min-width: 576px) {
-  .modal__content2 {
-    max-width: 500px;
-    margin: 50px auto;
-  }
-}
-.modal__show .modal__backdrop1,
-.modal__show .modal__content1 {
-  opacity: 1;
-  z-index: 1050;
-  pointer-events: auto;
-  overflow-y: auto;
-}
-
-.modal__body1 {
-  width: auto;
-  height: auto;
-  overflow: hidden;
-}
-
-.modal__footer1 {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  padding: 1rem;
-}
-
 .modal__backdrop4 {
   position: fixed;
   top: 0;
@@ -1431,13 +1375,6 @@ input {
   width: auto;
   height: auto;
   overflow: hidden;
-}
-
-.modal__footer4 {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  padding: 1rem;
 }
 
 /*# sourceMappingURL=style.css.map */
