--- a/assets/styles/scss/blocks/form/form.scss
+++ b/assets/styles/scss/blocks/form/form.scss
@@ -1,37 +1,41 @@
-.loginForm,
+
+
 .registrationForm {
-    display: flex;
+    margin-left:30%;
+    position: absolute;
+    z-index: 999999;
+    display: none;
     justify-content: center;
+    border: 4px solid white;
+    border-radius: 40px;
+    color: white;
 }
 
-.loginForm_template,
+
 .registration_template {
     background-color: #1D1D1F;
     width: 507px;
     border-radius: 31px;
 }
 
-.loginForm_template {
-    height: 685px;
-}
 
 .registration_template {
     height: 960px;
 }
 
-.loginForm_template_pic,
+
 .registration_template_pic {
     display: flex;
 }
 
-.loginForm_template_pic_Harry,
+
 .registration_template_pic_Harry {
     margin-left: auto;
     margin-right: auto;
     margin-top: 24px;
 }
 
-.loginForm_welcome_text,
+
 .registration_welcome_text {
     font-family: 'Roboto';
     font-style: normal;
@@ -45,7 +49,6 @@
     color: #DE9E15;
 }
 
-.loginForm_template_fieldset,
 .registration_template_fieldset {
     display: grid;
     justify-items: center;
@@ -117,7 +120,7 @@
     font-family: 'Roboto';
 }
 
-.loginForm_Buttons,
+
 .registration_Buttons {
     display: flex;
     justify-content: space-between;
@@ -125,30 +128,22 @@
     font-family: 'Roboto';
 }
 
-.loginButton,
-.signUpButton {
-    width: 193px;
+
+.signUpButton_close{
+    width: 100px;
     height: 51px;
     border-radius: 8px;
     padding: 0px;
-    margin-top: 41px;
+    margin-top:23px;
     color: #fff;
     font-family: 'Roboto';
-}
-
-.signUpButton {
-    background-color: #DE9E15;
+    background-color: #966806fa;
     border-style: solid;
     border: none;
 }
 
-.loginButton {
-    border: 1px solid white;
-    background-color: rgba(28, 28, 28, 0);
-}
-
 .signUpButton_registration {
-    width: 422px;
+    width: 300px;
     height: 51px;
     border-radius: 8px;
     padding: 0px;
@@ -160,9 +155,7 @@
     border: none;
 }
 
-.checkLogin {
-    justify-content: flex-end;
-}
+
 
 .pasInfo {
     height: 2vh;
