--- a/assets/styles/scss/blocks/header/__login/header__login.scss
+++ b/assets/styles/scss/blocks/header/__login/header__login.scss
@@ -2,7 +2,7 @@
     font-family: 'Roboto', sans-serif;
     text-decoration: none;
     font-weight: 500;
-    font-size: 19px;
-    line-height: 19px;
+    font-size: 1.44vw;
+    line-height: 1.44vw;
     color: #000;
 }
