--- a/assets/styles/scss/blocks/header/__link/header__link.scss
+++ b/assets/styles/scss/blocks/header/__link/header__link.scss
@@ -1,9 +1,9 @@
 .header__link {
     font-family: 'Roboto', sans-serif;
     text-decoration: none;
-    margin-right: 70px;
+    margin-right: 5.31vw;
     font-weight: 500;
-    font-size: 19px;
-    line-height: 19px;
+    font-size:1.44vw;
+    line-height: 1.44vw;
     color: #000;
 }
