--- a/assets/styles/scss/blocks/form/form.scss
+++ b/assets/styles/scss/blocks/form/form.scss
@@ -1,12 +1,10 @@
-
-
 .registrationForm {
-    margin-left:30%;
+    margin-left: 30%;
     position: absolute;
     z-index: 999999;
     display: none;
     justify-content: center;
-    border: 4px solid white;
+
     border-radius: 40px;
     color: white;
 }
@@ -20,7 +18,7 @@
 
 
 .registration_template {
-    height:  147.2vh;
+    height: 147.2vh;
 }
 
 
@@ -33,7 +31,7 @@
     margin-left: auto;
     margin-right: auto;
     margin-top: 3.68vh;
-    width:90%;
+    width: 90%;
 }
 
 
@@ -61,7 +59,7 @@
 .heroBlock {
     display: grid;
     justify-items: left;
-    margin-bottom:  3.68vh;
+    margin-bottom: 3.68vh;
     width: 32.01vw;
 }
 
@@ -71,7 +69,7 @@
 .selectHero {
     border-radius: 8px;
     width: 30.8vw;
-    height:8.58vh;
+    height: 8.58vh;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
@@ -80,7 +78,7 @@
     color: #1F2832;
     padding-left: 1.21vw;
     border-style: solid;
-    border: none;
+
 }
 
 .emailLabel,
@@ -130,7 +128,7 @@
 }
 
 
-.signUpButton_close{
+.signUpButton_close {
     width: 7.58vw;
     height: 7.82vh;
     border-radius: 8px;
@@ -165,11 +163,12 @@
 }
 
 .valid {
-    border-color: rgb(26, 204, 58);
+    border: 2px solid rgb(26, 204, 58);
+    color: blue;
 }
 
 .error {
-    border-color: rgb(203, 68, 104);
+    border: 2px solid rgb(203, 68, 104);
 }
 
 input {
