--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -776,6 +776,15 @@ input:focus:-ms-input-placeholder {
   display: none;
 }
 
+.mainpage_click {
+  background: rgba(0, 0, 0, 0.6);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-blend-mode: multiply;
+  text-align: center;
+  color: rgba(255, 255, 255, 0.179);
+}
+
 .header__container {
   display: flex;
   align-items: center;
@@ -1022,7 +1031,7 @@ a:hover {
 }
 
 .registrationForm {
-  margin-left: 30%;
+  margin-left: 35%;
   position: absolute;
   z-index: 999999;
   display: none;
@@ -1033,12 +1042,12 @@ a:hover {
 
 .registration_template {
   background-color: #1D1D1F;
-  width: 38.4vw;
+  width: 23vw;
   border-radius: 31px;
 }
 
 .registration_template {
-  height: 147.2vh;
+  height: 106vh;
 }
 
 .registration_template_pic {
@@ -1066,8 +1075,11 @@ a:hover {
 }
 
 .registration_template_fieldset {
-  display: grid;
+  display: flex;
+  flex-direction: column;
   justify-items: center;
+  align-items: center;
+  margin: auto;
 }
 
 .emailBlock,
@@ -1075,9 +1087,8 @@ a:hover {
 .loginBlock,
 .heroBlock {
   display: grid;
-  justify-items: left;
-  margin-bottom: 3.68vh;
-  width: 32.01vw;
+  margin-bottom: 2vh;
+  width: 19.5vw;
 }
 
 .email,
@@ -1085,8 +1096,8 @@ a:hover {
 .login,
 .selectHero {
   border-radius: 8px;
-  width: 30.8vw;
-  height: 8.58vh;
+  width: 18vw;
+  height: 5vh;
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
@@ -1138,16 +1149,16 @@ a:hover {
 .registration_Buttons {
   display: flex;
   justify-content: space-between;
-  width: 32.01vw;
+  width: 20vw;
   font-family: "Roboto";
+  margin-top: 0.7em;
 }
 
 .signUpButton_close {
-  width: 7.58vw;
-  height: 7.82vh;
+  width: 5em;
+  height: 7vh;
   border-radius: 8px;
   padding: 0px;
-  margin-top: 3.52vh;
   color: #fff;
   font-family: "Roboto";
   background-color: rgba(150, 104, 6, 0.9803921569);
@@ -1156,12 +1167,10 @@ a:hover {
 }
 
 .signUpButton_registration {
-  width: 22.76vw;
-  height: 7.82vh;
+  width: 13em;
+  height: 7vh;
   border-radius: 8px;
   padding: 0px;
-  margin-top: 3.52vh;
-  margin-bottom: 7%;
   color: #fff;
   background-color: #DE9E15;
   border-style: solid;
