--- a/assets/styles/scss/blocks/header/header.scss
+++ b/assets/styles/scss/blocks/header/header.scss
@@ -4,3 +4,4 @@
 @import "./__logo/header__logo.scss";
 @import "./__menu/header__menu.scss";
 @import "./__login/header__login.scss";
+@import "./__avatar/header__avatar.scss"
