--- a/assets/styles/scss/blocks/comments/comments.scss
+++ b/assets/styles/scss/blocks/comments/comments.scss
@@ -12,9 +12,8 @@
 .comments__result {
     display: flex;
     flex-direction: column;
-    max-height: 500px;
-    overflow: auto;
-    overflow-x: hidden;
+    max-height: 480px;
+    overflow: hidden;
 }
 
 .comments__result::-webkit-scrollbar {
