--- a/assets/styles/scss/blocks/mainpage/__container/__text3/mainpage__container__text3.scss
+++ b/assets/styles/scss/blocks/mainpage/__container/__text3/mainpage__container__text3.scss
@@ -1,6 +1,5 @@
-.mainpage__container__text3{
-    color: rgb(177, 176, 176);
-    font-size: 1vw;
-    font-weight: 100;
-  }
-  
+.mainpage__container__text3 {
+  color: rgb(177, 176, 176);
+  font-size: 1vw;
+  font-weight: bold;
+}
