--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -20,3 +20,4 @@
 @import "../scss/blocks/hero+spell/hero+spell.scss";
 @import "../scss/modal2.scss";
 @import "../scss/registration.scss";
+@import "../scss/kabinet.scss";
