--- a/assets/styles/scss/blocks/comments/__result/__result.scss
+++ b/assets/styles/scss/blocks/comments/__result/__result.scss
@@ -1,3 +1,4 @@
+@import url(./__button/__button.scss);
 .comments__result-item>div {
     width: 85vh;
     height: 7rem;
@@ -30,4 +31,21 @@
     display: block;
     font-size: 15px;
     margin: 2vh 0 0 70vh;
+}
+
+.comments__result-btn {
+    position: relative;
+    margin-top: 2vh;
+    border-radius: 40px;
+    background-color: black;
+}
+
+#btnEnd {
+    margin-left: 120vh;
+    transform: rotate(90deg);
+}
+
+#btnStart {
+    margin-left: 35vh;
+    transform: rotate(90deg);
 }
