--- a/assets/styles/scss/kabinet.scss
+++ b/assets/styles/scss/kabinet.scss
@@ -41,14 +41,13 @@
     overflow-y: auto;
 }
 
-
 .modal__body5 {
     width: auto;
     height: auto;
     overflow: hidden;
 }
 
-.userAccountPage{
+.userAccountPage {
     background-image: url(./assets/images/mainpage/fon_mainpage.png);
     background-size: 100%;
     background-repeat: no-repeat;
@@ -59,11 +58,10 @@
     justify-content: center;
 }
 
-
-.userForm{
+.userForm {
     border: 5px solid white;
     border-radius: 53px;
-    height:  228.68vh;
+    height: 228.68vh;
     width: 75.41vw;
     background-color: #1D1D1F;
     justify-content: center;
@@ -71,59 +69,58 @@
     margin-top: 26.38vh;
 }
 
-.welcome{
+.welcome {
     display: flex;
     width: 59.18vw;
     align-items: center;
-    margin-top:  14.41vh;
+    margin-top: 14.41vh;
     margin-left: auto;
     margin-right: auto;
 }
 
-.welcomeUser{
-    margin-left:  2.27vw;
+.welcomeUser {
+    margin-left: 2.27vw;
     color: white;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
-    font-size:  2.27vw;
+    font-size: 2.27vw;
     line-height: 100%;
 }
 
-.userFormPic{
+.userFormPic {
     width: 16.7vw;
 }
 
-.fieldset{
+.fieldset {
     margin-left: auto;
     margin-right: auto;
     display: flex;
     margin-top: 6.28vh;
 }
-.fieldsetItems{
+
+.fieldsetItems {
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
 
-
-
 .registration_template {
-height: 147.23vh;
+    height: 147.23vh;
 }
 
 .loginForm_welcome_text,
 .registration_welcome_text {
-font-family: "Roboto";
-font-style: normal;
-font-weight: 400;
-font-size: 1.51vw;
-color: #FFFFFF;
-text-align: center;
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1.51vw;
+    color: #FFFFFF;
+    text-align: center;
 }
 
 .nameColor {
-color: #DE9E15;
+    color: #DE9E15;
 }
 
 .LKemailBlock,
@@ -132,10 +129,10 @@ color: #DE9E15;
 .LKheroBlock,
 .LKavatarBlock,
 .LKcommentBlock {
-display: grid;
-justify-items: left;
-margin-bottom: 1.99vh;
-width: 59.18vw;
+    display: grid;
+    justify-items: left;
+    margin-bottom: 1.99vh;
+    width: 59.18vw;
 }
 
 .LKemail,
@@ -143,33 +140,35 @@ width: 59.18vw;
 .LKlogin,
 .LKselectHero,
 .LKuserAvatar {
-border-radius: 24px;
-width: 54.47vw;
-height:  14.11vw;
-font-family: "Roboto";
-font-style: normal;
-font-weight: 400;
-font-size: 1.21vw;
-line-height:  3.68vh;
-color: #1F2832;
-padding-left: 3.79vw;
-border: 6px solid white;
-background-color: transparent;;
+    border-radius: 24px;
+    width: 54.47vw;
+    height: 14.11vw;
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1.21vw;
+    line-height: 3.68vh;
+    color: #1F2832;
+    padding-left: 3.79vw;
+    border: 6px solid white;
+    background-color: transparent;
+    ;
 }
 
 .LKuserComment {
-border-radius: 24px;
-width: 54.47vw;
-height: 40.95vh;
-font-family: "Roboto";
-font-style: normal;
-font-weight: 400;
-font-size: 1.21vw;
-line-height:  3.68vh;
-color: #1F2832;
-padding-left: 3.79vw;
-border: 6px solid white;
-background-color: transparent;;
+    border-radius: 24px;
+    width: 54.47vw;
+    height: 40.95vh;
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1.21vw;
+    line-height: 3.68vh;
+    color: #1F2832;
+    padding-left: 3.79vw;
+    border: 6px solid white;
+    background-color: transparent;
+    ;
 }
 
 .LKemailLabel,
@@ -178,79 +177,80 @@ background-color: transparent;;
 .LKheroLabel,
 .LKuserAvatarLabel,
 .LKcommentLabel {
-color: #fff;
-font-family: "Roboto";
-font-style: normal;
-font-weight: 400;
-font-size: 2.27vw;
-margin-bottom: 1.22vh;
+    color: #fff;
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 2.27vw;
+    margin-bottom: 1.22vh;
 }
 
 .restorePass_Link {
-text-align: right;
-text-decoration-line: underline;
-color: #FFFFFF;
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
+    text-align: right;
+    text-decoration-line: underline;
+    color: #FFFFFF;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
 }
 
 .rememberText {
-font-family: "Inter";
-font-style: normal;
-font-weight: 400;
-font-size: 1.21vw;
-line-height: 100%;
-color: #FFFFFF;
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1.21vw;
+    line-height: 100%;
+    color: #FFFFFF;
 }
 
 .checkboxBlock {
-display: flex;
-grid-template-columns: 1fr 1fr;
-width:  32.01vw;
-justify-content: space-between;
-font-family: "Roboto";
+    display: flex;
+    grid-template-columns: 1fr 1fr;
+    width: 32.01vw;
+    justify-content: space-between;
+    font-family: "Roboto";
 }
 
 .LKForm_Buttons {
-display: flex;
-justify-content: space-between;
-width: 32.01vw;
-font-family: "Roboto";
+    display: flex;
+    justify-content: space-between;
+    width: 32.01vw;
+    font-family: "Roboto";
 }
 
 .closeButton,
 .signUpButton {
-width:13.4vw;
-height:  9.04vh;
-border-radius: 24px;
-padding: 0px;
-margin-top:  6.28vh;
-color: #fff;
-font-family: "Roboto";
-font-size: 1.97vw;
+    width: 13.4vw;
+    height: 9.04vh;
+    border-radius: 24px;
+    padding: 0px;
+    margin-top: 6.28vh;
+    color: #fff;
+    font-family: "Roboto";
+    font-size: 1.97vw;
 }
 
 .signUpButton {
-background-color: #DE9E15;
-border-style: solid;
-border: none;
+    background-color: #DE9E15;
+    border-style: solid;
+    border: none;
 }
 
 .closeButton {
-border-style: solid;
-border: none;
-background: rgba(222, 158, 21, 0.48);;
+    border-style: solid;
+    border: none;
+    background: rgba(222, 158, 21, 0.48);
+    ;
 }
 
 .signUpButton_registration {
-width:  32.01vw;
-height: 7.82vh;
-border-radius: 8px;
-padding: 0px;
-margin-top: 3.52vh;
-color: #fff;
-background-color: #DE9E15;
-border-style: solid;
-border: none;
+    width: 32.01vw;
+    height: 7.82vh;
+    border-radius: 8px;
+    padding: 0px;
+    margin-top: 3.52vh;
+    color: #fff;
+    background-color: #DE9E15;
+    border-style: solid;
+    border: none;
 }
