--- a/assets/styles/scss/kabinet.scss
+++ b/assets/styles/scss/kabinet.scss
@@ -19,7 +19,7 @@
     border: 5px solid white;
     border-radius: 53px;
     height: 228.68vh;
-    width: 75.41vw;
+    width: 40%;
     background-color: #1D1D1F;
     justify-content: center;
     align-items: flex-start;
@@ -62,11 +62,12 @@
     border: 5px solid white;
     border-radius: 53px;
     height: 228.68vh;
-    width: 75.41vw;
+    width: 3em;
     background-color: #1D1D1F;
     justify-content: center;
     align-items: flex-start;
     margin-top: 26.38vh;
+
 }
 
 .welcome {
@@ -89,7 +90,7 @@
 }
 
 .userFormPic {
-    width: 16.7vw;
+    width: 17%;
 }
 
 .fieldset {
@@ -140,9 +141,10 @@
 .LKlogin,
 .LKselectHero,
 .LKuserAvatar {
+
     border-radius: 24px;
-    width: 54.47vw;
-    height: 14.11vw;
+    width: 20em;
+    height: 3em;
     font-family: "Roboto";
     font-style: normal;
     font-weight: 400;
