--- a/assets/styles/scss/kabinet.scss
+++ b/assets/styles/scss/kabinet.scss
@@ -46,7 +46,7 @@
     height: auto;
     overflow: hidden;
 }
-
+/*
 .userAccountPage {
     background-image: url(./assets/images/mainpage/fon_mainpage.png);
     background-size: 100%;
@@ -57,27 +57,28 @@
     align-items: center;
     justify-content: center;
 }
-
+*/
 .userForm {
+    margin-left:30vw;
     position: absolute;
     z-index: 10000;
-    display: none;
+    padding-left:3vw;
     border: 5px solid white;
     border-radius: 53px;
-    height: 228.68vh;
-    width: 3em;
+    height: 120vh;
+    width: 35%;
     background-color: #1D1D1F;
     justify-content: center;
     align-items: flex-start;
-    margin-top: 26.38vh;
+    margin-top: 5vh;
 
 }
 
 .welcome {
     display: flex;
-    width: 59.18vw;
+    width: 100%;
     align-items: center;
-    margin-top: 14.41vh;
+    margin-top: 5vh;
     margin-left: auto;
     margin-right: auto;
 }
@@ -88,7 +89,7 @@
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
-    font-size: 2.27vw;
+    font-size: 1.5vw;
     line-height: 100%;
 }
 
@@ -97,8 +98,7 @@
 }
 
 .fieldset {
-    margin-left: auto;
-    margin-right: auto;
+    width: 100%;
     display: flex;
     margin-top: 6.28vh;
 }
@@ -136,7 +136,7 @@
     display: grid;
     justify-items: left;
     margin-bottom: 1.99vh;
-    width: 59.18vw;
+    width: 80%;
 }
 
 .LKemail,
@@ -146,7 +146,7 @@
 .LKuserAvatar {
 
     border-radius: 24px;
-    width: 20em;
+    width: 90%;
     height: 3em;
     font-family: "Roboto";
     font-style: normal;
@@ -155,15 +155,15 @@
     line-height: 3.68vh;
     color: #1F2832;
     padding-left: 3.79vw;
-    border: 6px solid white;
+    border: 3px solid white;
     background-color: transparent;
     ;
 }
 
 .LKuserComment {
     border-radius: 24px;
-    width: 54.47vw;
-    height: 40.95vh;
+    width:90%;
+    height: 5em;
     font-family: "Roboto";
     font-style: normal;
     font-weight: 400;
@@ -171,7 +171,7 @@
     line-height: 3.68vh;
     color: #1F2832;
     padding-left: 3.79vw;
-    border: 6px solid white;
+    border: 3px solid white;
     background-color: transparent;
     ;
 }
@@ -186,7 +186,7 @@
     font-family: "Roboto";
     font-style: normal;
     font-weight: 400;
-    font-size: 2.27vw;
+    font-size: 1.27vw;
     margin-bottom: 1.22vh;
 }
 
@@ -219,20 +219,20 @@
 .LKForm_Buttons {
     display: flex;
     justify-content: space-between;
-    width: 32.01vw;
+    width: 100%;
     font-family: "Roboto";
 }
 
 .closeButton,
 .signUpButton {
-    width: 13.4vw;
-    height: 9.04vh;
+    width: 10vw;
+    height: 7vh;
     border-radius: 24px;
     padding: 0px;
     margin-top: 6.28vh;
     color: #fff;
     font-family: "Roboto";
-    font-size: 1.97vw;
+    font-size: 1.57vw;
 }
 
 .signUpButton {
