--- a/assets/styles/scss/blocks/comments/comments.scss
+++ b/assets/styles/scss/blocks/comments/comments.scss
@@ -9,6 +9,10 @@
     background-size: 100%;
 }
 
+#comments {
+    height: 108vh;
+}
+
 .comments__result {
     display: flex;
     flex-direction: column;
