поправила верстку регистрации

--- a/assets/styles/scss/kabinet.scss
+++ b/assets/styles/scss/kabinet.scss
@@ -9,7 +9,10 @@
     border-radius: 53px;
     height: 120vh;
     width: 35%;
-    background-color: #1D1D1F;
+    background-image: url('../../images/card/bigfon.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     justify-content: center;
     align-items: flex-start;
     margin-top: 5vh;
