--- a/assets/styles/scss/blocks/form/form.scss
+++ b/assets/styles/scss/blocks/form/form.scss
@@ -1,32 +1,25 @@
 .registrationForm {
-    margin-left: 35%;
+    display:none;
+    margin-left: 32%;
     position: absolute;
     z-index:9999;
-    display: none;
     justify-content: center;
     border-radius: 40px;
     color: white;
 
 }
 
-
 .registration_template {
     background-color: #1D1D1F;
-    width: 23vw;
+    width: 95%;
+    height: 120vh;
     border-radius: 31px;
 
 }
 
-
-.registration_template {
-    height: 106vh;
-}
-
-
 .registration_template_pic {
     display: flex;
 }
-
 
 .registration_template_pic_Harry {
     margin-left: auto;
@@ -53,8 +46,8 @@
     display: flex;
     flex-direction: column;
     justify-items: center;
-    align-items: center;
-    margin: auto;
+    margin-left: 7%;
+
 }
 
 .emailBlock,
@@ -63,7 +56,7 @@
 .heroBlock {
     display: grid;
     margin-bottom: 2vh;
-    width: 19.5vw;
+    width: 87%;
 }
 
 .email,
@@ -71,8 +64,8 @@
 .login,
 .selectHero {
     border-radius: 8px;
-    width: 18vw;
-    height: 5vh;
+    width: 100%;
+    height: 6vh;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
@@ -126,14 +119,14 @@
 .registration_Buttons {
     display: flex;
     justify-content: space-between;
-    width: 20vw;
+    width: 90%;
     font-family: 'Roboto';
     margin-top: 0.7em;
 }
 
 
 .signUpButton_close {
-    width: 5em;
+    width: 35%;
     height: 7vh;
     border-radius: 8px;
     padding: 0px;
@@ -146,7 +139,7 @@
 }
 
 .signUpButton_registration {
-    width: 13em;
+    width: 60%;
     height: 7vh;
     border-radius: 8px;
     padding: 0px;
