--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -587,6 +587,7 @@ template {
 #res {
   color: #DE9E15;
   font-weight: normal;
+  margin-top: 1em;
 }
 
 .mainpage__container__button {
@@ -658,6 +659,7 @@ input:focus:-ms-input-placeholder {
   color: rgb(177, 176, 176);
   font-size: 1vw;
   font-weight: bold;
+  margin-bottom: 23em;
 }
 
 .mainpage {
