--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -1500,10 +1500,12 @@ input {
 
 .comments__result-item > div {
   width: 85vh;
-  height: 7rem;
+  height: 102px;
   background-color: white;
   opacity: 0.8;
   border-radius: 27px;
+  padding: 1vh;
+  margin-bottom: 5px;
 }
 
 .comments__photo {
@@ -1514,13 +1516,18 @@ input {
 }
 
 .comments__name {
+  display: inline-block;
+  position: relative;
   font-size: 25px;
-  margin: 1vh 0 0 5vh;
+  top: -30px;
+  left: 15px;
 }
 
 .comments__content {
+  display: block;
+  position: relative;
   font-size: 23px;
-  margin: 1vh 0 0 3vh;
+  margin: -47px 0 0 80px;
   max-width: 80vh;
   max-height: 5vh;
   overflow: auto;
@@ -1538,12 +1545,13 @@ input {
   height: 52px;
   margin-top: 2vh;
   border-radius: 50%;
-  background-color: black;
+  border: none !important;
+  background: black;
 }
 
 #btnEnd {
   margin-left: 120vh;
-  transform: rotate(90deg);
+  transform: rotate(-90deg);
 }
 
 #btnStart {
