--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -1482,22 +1482,34 @@ input {
 
 .comments__result-btn {
   display: none;
-  width: 52px;
-  height: 52px;
+  width: 40px;
+  height: 56px;
   margin-top: 2vh;
-  border-radius: 50%;
-  background-color: black;
+  border: none;
 }
 
 #btnEnd {
-  margin-left: 120vh;
+  border-radius: 20%;
+  margin-left: 110vh;
   transform: rotate(90deg);
+  background: url("../../images/mainpage/arrayBlueR.svg") no-repeat;
 }
 
 #btnStart {
   margin-left: 160vh;
   margin-top: -7vh;
   transform: rotate(90deg);
+  background: url("../../images/mainpage/arrayBlueL.svg") no-repeat;
+}
+
+#btnEnd:hover {
+  transform: rotate(90deg);
+  background: url("../../images/mainpage/arrayLeft.svg") no-repeat;
+}
+
+#btnStart:hover {
+  transform: rotate(90deg);
+  background: url("../../images/mainpage/arrayRight.svg") no-repeat;
 }
 
 .comments {
