--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -1497,13 +1497,11 @@ input {
 
 #btnEnd {
   border-radius: 20%;
-  margin-left: 110vh;
   transform: rotate(90deg);
   background: url("../../images/mainpage/arrayBlueR.svg") no-repeat;
 }
 
 #btnStart {
-  margin-left: 150vh;
   transform: rotate(90deg);
   background: url("../../images/mainpage/arrayBlueL.svg") no-repeat;
 }
@@ -1516,6 +1514,14 @@ input {
 #btnStart:hover {
   transform: rotate(90deg);
   background: url("../../images/mainpage/arrayRight.svg") no-repeat;
+}
+
+.btnFlex {
+  margin-left: 35em;
+  width: 70%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
 .comments {
