--- a/assets/styles/scss/blocks/comments/__result/__result.scss
+++ b/assets/styles/scss/blocks/comments/__result/__result.scss
@@ -40,24 +40,21 @@
 }
 
 .comments__result-btn {
-
     display: none;
+    position: relative;
     width: 40px;
     height: 56px;
-    margin-top: 2vh;
+    margin-top: 1vh;
     border: none;
 }
 
 #btnEnd {
-
     border-radius: 20%;
-
     transform: rotate(90deg);
     background: url('../../images/mainpage/arrayBlueR.svg')no-repeat;
 }
 
 #btnStart {
-
     transform: rotate(90deg);
     background: url('../../images/mainpage/arrayBlueL.svg')no-repeat;
 }
@@ -70,7 +67,6 @@
 #btnStart:hover {
     transform: rotate(90deg);
     background: url('../../images/mainpage/arrayRight.svg')no-repeat;
-
 }
 
 .btnFlex {
@@ -79,6 +75,4 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-
-
 }
